--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-demo",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://johnevanjr.github.io/",
+  "homepage": "https://johnevanjr.github.io/blog",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
